Date : Not released
Database update : No for version >= 1.0.2
Migration path : from version > 1.0.0

UPGRADE NOTES : 
Lots of code splitting to have a better code, added continuous integration tests.

BUGS
====
1) Performance data was transfered in display when using API (issue#22)


ENHANCEMENTS
============
1) Added negative numbers evaluation in rules.
2) More precise error on MIB upload errors (issue#21)
3) Added plugins support : function (beta)

-------------------------------------------------------------------------------------------------
Version 1.0.2
Date : 04 Nov 2019
Database update : Yes
Migration path : from version > 1.0.0

UPGRADE NOTES : 
The main changes are the way mib updates are handled.
First update is now twice as fast, and incremental updates don't re-create the database.

BUGS
====
1) When editing/adding handler, service is reset when changing action. Also problems with services with spaces (issue#17)


ENHANCEMENTS
============
1) Added regexp to select oid for rule eval (not implemented in GUI)
2) Mib database update is now much faster.
3) Automatic bash script installer (see documentation).

-------------------------------------------------------------------------------------------------
Version 1.0.1
Date : 28 Sept 2019
Database update : No
Migration path : from version > 1.0.0

UPGRADE NOTES : Simply replace files

BUGS
====
1) Bug in handler editing (OK status for actions was no displayed and could be overwritten)
2) Mib trap syntax was not correctly imported in database
3) Bug in API test
4) Bug in URL calculation with javascript (issue#10)
5) Database disconnect when updating mibs (issue#11)

ENHANCEMENTS
============

1) Added ido database test in settings and redirects to settings when pages tries an access to ido that fails. (ref issue#5)
2) Added PotgreSQL Support (ref issue#9)

-------------------------------------------------------------------------------------------------
Version 1.0.0
Date : 31/08/2019

First stable version