@@ -15,7 +15,8 @@ ENHANCEMENTS
 ============
 1) Added negative numbers evaluation in rules.
 2) More precise error on MIB upload errors (issue#21)
-3) Added plugins support : function (beta)
+3) Added plugins support : function
+4) Added regexp for OID selection in rules and display in GUI
 
 -------------------------------------------------------------------------------------------------
 Version 1.0.2
